# gecko-mediaplayer

./: ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  aclocal.m4  config.h  config.h.in  configure  configure.in  gecko-mediaplayer.schemas  gecko-mediaplayer.spec.in
branches/INITIAL/: config.h  configure
branches/INITIAL/src/: Makefile.in  plugin.cpp  plugin_types_wmp.cpp
debian/: Makefile.am  Makefile.in  rules
po/: cs.po  de.po  es.po  fr.po  gecko-mediaplayer.pot  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  tr.po
src/: Makefile.am  Makefile.in  np_entry.cpp  npn_gate.cpp  npp_gate.cpp  npplat.h  npupp.h  nsIScriptableGeckoMediaPlayer.h  nsIScriptableGeckoMediaPlayer.idl  nsScriptablePeer.cpp  plugin.cpp  plugin.h  plugin_dbus.cpp  plugin_dbus.h  plugin_list.cpp  plugin_list.h  plugin_setup.cpp  plugin_setup.h  plugin_types_dvx.cpp  plugin_types_qt.cpp  plugin_types_rm.cpp  plugin_types_std.cpp  plugin_types_wmp.cpp
tags/pre-npruntime/: ChangeLog  Makefile.in  config.h  config.h.in  configure  configure.in
tags/pre-npruntime/po/: es.po  fr.po  pl.po  pt_BR.po
tags/v0_0_2/: ChangeLog
tags/v0_0_4/: ChangeLog
tags/v0_0_4/src/: Makefile.in  plugin.cpp  plugin.h  plugin_dbus.cpp  plugin_types.h
tags/v0_0_6/: Makefile.am  configure.in  gecko-mediaplayer.spec.in
tags/v0_0_6/debian/: watch
tags/v0_0_6/src/: nsScriptablePeer.cpp  plugin.cpp  plugin_list.cpp  plugin_list.h  plugin_setup.cpp  plugin_types_dvx.cpp  plugin_types_std.cpp
tags/v0_0_7/: ChangeLog  Makefile.in  config.h
tags/v0_0_7/src/: Makefile.am  plugin.cpp  plugin_list.cpp  plugin_list.h  plugin_setup.cpp
tags/v0_5_0/: config.h  configure
tags/v0_5_0/src/: nsIScriptableGeckoMediaPlayer.idl  nsScriptablePeer.h  plugin.cpp  plugin.h  plugin_dbus.cpp  plugin_dbus.h  plugin_types_rm.cpp  plugin_types_wmp.cpp
tags/v0_5_1/: ChangeLog  Makefile.in  aclocal.m4  config.h  configure.in
tags/v0_5_1/debian/: Makefile.in  changelog  control
tags/v0_5_1/src/: nsIScriptableGeckoMediaPlayer.h  nsScriptablePeer.cpp  plugin.h  plugin_types_rm.cpp
tags/v0_5_2/: config.h  configure
tags/v0_5_2/debian/: files
tags/v0_5_2/src/: Makefile.am  nsScriptablePeer.cpp  plugin.cpp  plugin_setup.cpp  plugin_types_qt.cpp
tags/v0_5_3/: configure.in  gecko-mediaplayer.spec.in
tags/v0_5_3/po/: fr.po
tags/v0_5_3/src/: nsIScriptableGeckoMediaPlayer.h  plugin.cpp  plugin_list.h  plugin_types_rm.cpp  plugin_types_wmp.cpp
tags/v0_5_4/: Makefile.in  configure  configure.in
tags/v0_5_4/debian/: gecko-mediaplayer.substvars
tags/v0_5_4/po/: fr.po  gecko-mediaplayer.pot  pt_BR.po
tags/v0_5_4/src/: plugin.cpp  plugin_setup.cpp
tags/v0_6_0/: ChangeLog  configure
tags/v0_6_0/debian/: gecko-mediaplayer.1
tags/v0_6_0/src/: plugin.cpp  plugin_dbus.cpp
tags/v0_6_1/: ChangeLog  Makefile.am  config.h  configure  configure.in
tags/v0_6_1/po/: fr.po  pl.po
tags/v0_6_1/src/: Makefile.in
tags/v0_6_2/: configure  configure.in
tags/v0_6_2/po/: fr.po  pl.po
tags/v0_6_2/src/: plugin_types_qt.cpp
tags/v0_6_3/: config.h
tags/v0_7_0/: config.h
tags/v0_8_0/: config.h  configure
tags/v0_8_0/src/: plugin.h  plugin_setup.cpp
tags/v0_9_0/: config.h
tags/v0_9_0/po/: gecko-mediaplayer.pot  pt_BR.po
tags/v0_9_2/: config.h
tags/v0_9_4/po/: fr.po
tags/v0_9_5/po/: fr.po
tags/v0_9_6/: ChangeLog  configure.in
tags/v0_9_6/src/: plugin.cpp  plugin_dbus.cpp  plugin_setup.cpp
tags/v1.0.0/: ChangeLog  Makefile.in  config.h.in  configure  configure.in
tags/v1.0.0/po/: cs.po  es.po  gecko-mediaplayer.pot  tr.po
tags/v1.0.0/src/: plugin.h  plugin_dbus.cpp  plugin_list.h  plugin_setup.cpp
tags/v1.0.3/: ChangeLog  configure
tags/v1.0.3/po/: cs.po  es.po  fr.po  gecko-mediaplayer.pot  ja.po  nl.po  tr.po
tags/v1.0.3/src/: plugin.h  plugin_dbus.cpp  plugin_list.cpp
tags/v1.0.5/: Makefile.in  config.h.in
tags/v1.0.5/po/: de.po  es.po  gecko-mediaplayer.pot  it.po  nl.po  pl.po  pt.po  pt_BR.po
tags/v1.0.5/src/: Makefile.am  plugin.cpp
tags/v1.0.6/: Makefile.am  configure.in
tags/v1.0.6/po/: cs.po  de.po  es.po  gecko-mediaplayer.pot  nl.po
tags/v1.0.6/src/: Makefile.in  npupp.h  plugin.cpp  plugin.h  plugin_setup.cpp
tags/v1.0.7/: ChangeLog  Makefile.in  configure  configure.in
tags/v1.0.7/po/: de.po  es.po  ja.po  pl.po  pt_BR.po  tr.po
tags/v1.0.7/src/: Makefile.in  plugin.h  plugin_list.h  plugin_types_rm.cpp  plugin_types_wmp.cpp
tags/v1.0.9/: ChangeLog  Makefile.in  configure  configure.in
tags/v1.0.9/po/: it.po  nl.po  pt_BR.po  tr.po
tags/v1.0.9/src/: plugin_dbus.cpp  plugin_types_dvx.cpp
tags/v_0_0_3/src/: nsScriptablePeer.cpp  plugin.cpp  plugin_dbus.cpp  plugin_setup.h
trunk/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in  gecko-mediaplayer.spec.in
trunk/debian/: Makefile.am  changelog  copyright  dirs  gecko-mediaplayer.manpages
trunk/po/: cs.po  de.po  es.po  fr.po  gecko-mediaplayer.pot  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  tr.po
trunk/src/: Makefile.am  Makefile.in  np_entry.cpp  npn_gate.cpp  npp_gate.cpp  npupp.h  nsIScriptableGeckoMediaPlayer.h  nsIScriptableGeckoMediaPlayer.idl  nsScriptablePeer.cpp  plugin.cpp  plugin.h  plugin_dbus.cpp  plugin_dbus.h  plugin_list.cpp  plugin_list.h  plugin_setup.cpp  plugin_types_dvx.cpp  plugin_types_qt.cpp  plugin_types_rm.cpp  plugin_types_std.cpp  plugin_types_wmp.cpp  pluginbase.h
