dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gecko-mediaplayer, 0.0.2)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC


AC_PROG_CPP
AC_PROG_CXX



dnl Set gettext package name
GETTEXT_PACKAGE=gecko-mediaplayer
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT



AM_PROG_LIBTOOL



PKG_CHECK_MODULES(GLIB, [glib-2.0 ])
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GECKO, [mozilla-plugin],[GECKO_HOME=`$PKG_CONFIG --variable=libdir mozilla-plugin`],[AC_MSG_WARN([mozilla-plugin not found, trying another])])

if test "$GECKO_CFLAGS" = ""; then
PKG_CHECK_MODULES(GECKO, [firefox-plugin firefox-xpcom],[GECKO_HOME=`$PKG_CONFIG --variable=libdir firefox-plugin`],[AC_MSG_WARN([firefox-plugin not found, trying another])])
fi

if test "$GECKO_CFLAGS" = ""; then
PKG_CHECK_MODULES(GECKO, [seamonkey-plugin],[GECKO_HOME=`$PKG_CONFIG --variable=libdir seamonkey-plugin`],[AC_MSG_WARN([seamokey-plugin not found, trying another])])
fi

if test "$GECKO_CFLAGS" = ""; then
PKG_CHECK_MODULES(GECKO, [xulrunner-plugin],[GECKO_HOME=`$PKG_CONFIG --variable=libdir xulrunner-plugin`],[AC_MSG_WARN([xulrunner-plugin not found, trying another])])
fi

if test "$GECKO_CFLAGS" = ""; then
PKG_CHECK_MODULES(GECKO, [iceape-plugin],[GECKO_HOME=`$PKG_CONFIG --variable=libdir iceape-plugin`],[AC_MSG_WARN([iceape-plugin not found, trying another])])
fi

AC_SUBST(GECKO_CFLAGS)
AC_SUBST(GECKO_LIBS)
AC_SUBST(GECKO_HOME)


PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70 ])
AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])
